--- a/hardware/index.ejs
+++ b/hardware/index.ejs
@@ -8,10 +8,8 @@
 		<div class="container">
 			<h1>Hardware</h1>
 			<p>"Hardware - noun: the part of the computer that you can kick"<br/>~ Anonymous</p>
-			<p>
-				<a class="btn btn-primary btn-lg" role="button">Learn more
-					&raquo;</a>
-			</p>
+			<div id="LearnMore" style="display:none"><p>The following information was collected over the spans of years within the 3D printer space. Every attempt at accuracy was made since each person wanted the very best part for their own printer. If you do discover a mistake in any of this information, please contact us and we'll update our database.</p></div>
+			<div id="LearnLess"><p><a class="btn btn-primary btn-lg" role="button" onClick='document.getElementById("LearnMore").style.display="block";document.getElementById("LearnLess").style.display="none";'>Learn more	&raquo;</a></p></div>
 		</div>
 	</div>
 
