--- a/software/index.ejs
+++ b/software/index.ejs
@@ -8,10 +8,8 @@
 		<div class="container">
 			<h1>Software</h1>
 			<p>"640K ought to be enough for anybody"<br/>~ Bill Gates - 1981</p>
-			<p>
-				<a class="btn btn-primary btn-lg" role="button">Learn more
-					&raquo;</a>
-			</p>
+			<div id="LearnMore" style="display:none"><p>Several 3D printer enthusiasts have contributed to this wealth of information. Although we pride ourselves in accuracy, if you do notice a mistake in any of these pages, please contact us and we'll update our database.</p></div>
+			<div id="LearnLess"><p><a class="btn btn-primary btn-lg" role="button" onClick='document.getElementById("LearnMore").style.display="block";document.getElementById("LearnLess").style.display="none";'>Learn more	&raquo;</a></p></div>
 		</div>
 	</div>
 
