--- a/troubleshooting/index.ejs
+++ b/troubleshooting/index.ejs
@@ -8,10 +8,8 @@
 		<div class="container">
 			<h1>Troubleshooting</h1>
 			<p>Like "Army Intelligence", "Plug-and-play 3D" is an oxymoron.</p>
-			<p>
-				<a class="btn btn-primary btn-lg" role="button">Learn more
-					&raquo;</a>
-			</p>
+			<div id="LearnMore" style="display:none"><p>In a world like this, it's good to have experts. Fortunately, we have some of the best who have added their experience to the knowledge you'll gain here. Nonetheless, if you do notice a mistake in any of these pages, please contact us and we'll update our database.</p></div>
+			<div id="LearnLess"><p><a class="btn btn-primary btn-lg" role="button" onClick='document.getElementById("LearnMore").style.display="block";document.getElementById("LearnLess").style.display="none";'>Learn more	&raquo;</a></p></div>
 		</div>
 	</div>
 
