--- a/views/content-robo-r1plus.ejs
+++ b/views/content-robo-r1plus.ejs
@@ -3,7 +3,7 @@
 <div class="row">
 	<div class="col-md-4">
 		<h2 onClick='document.location="/hardware#robo-r1plus";'>Hardware</h2>
-		<p style='text-align:justify'>Paragraph</p>
+		<p style='text-align:justify'>Sourced parts lists, prices, upgrades and dis-assembly instructions</p>
 		<p>
 			<a class="btn btn-default" href="/hardware#robo-r1plus" role="button">View details
 				&raquo;</a>
@@ -11,7 +11,7 @@
 	</div>
 	<div class="col-md-4">
 		<h2 onClick='document.location="/software#robo-r1plus";'>Software</h2>
-		<p style='text-align:justify'>Paragraph</p>
+		<p style='text-align:justify'>Overview of included software, Cura slicing software</p>
 		<p>
 			<a class="btn btn-default" href="/software#robo-r1plus" role="button">View details
 				&raquo;</a>
@@ -19,7 +19,7 @@
 	</div>
 	<div class="col-md-4">
 		<h2 onClick='document.location="/troubleshooting#robo-r1plus";'>Troubleshooting</h2>
-		<p style='text-align:justify'>Paragraph</p>
+		<p style='text-align:justify'>Troubleshooting information, tips and tricks, print quality tuning</p>
 		<p>
 			<a class="btn btn-default" href="/troubleshooting#robo-r1plus" role="button">View details
 				&raquo;</a>
