--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,8 @@
 		<div class="container">
 			<h1>Hello, 3D printing world!</h1>
 			<p>We print, you print. And sometimes, we modify those printers. Wouldn't it be great to have a place where you can easily source the parts for those upgrades?</p>
-			<p>
-				<a class="btn btn-primary btn-lg" role="button">Learn more
-					&raquo;</a>
-			</p>
+			<div id="LearnMore" style="display:none"><p>Since we're 3D printer fanatics, we thought it would be awesome to be able to find in one place a website to source the parts for each printer we love. Explore... and let us know what you'd like to see here.</p></div>
+			<div id="LearnLess"><p><a class="btn btn-primary btn-lg" role="button" onClick='document.getElementById("LearnMore").style.display="block";document.getElementById("LearnLess").style.display="none";'>Learn more	&raquo;</a></p></div>
 		</div>
 	</div>
 
