--- a/views/robo-c2.ejs
+++ b/views/robo-c2.ejs
@@ -8,11 +8,9 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Robo C2</h1>
-			<p>Paragraph</p>
-			<p>
-				<a class="btn btn-primary btn-lg" role="button">Learn more
-					&raquo;</a>
-			</p>
+			<p>The Robo C2 is the next-next generation of fully-featured 3D printers from Robo 3D. Featuring a compact size, it has one of the fastest print speeds in the 3D consumer space with 300 mm per second and one of the largest build volumes in its category. With a built-in touch screen as well as WiFi and mobile connectivity it is fully compatible with Robo's new print app, so you can 3D print right from any iOS device. The Robo C2 printer brings a high-quality, easy-to-use solution to consumers. The Robo C2 is one of the smallest and most portable of 3D printers in the market, focused on users who want a smaller and more compact offering.</p>
+			<div id="LearnMore" style="display:none"><p>While it may be compact, it still boasts the same printing speed as its larger siblings as well as a minute resolution as little as 20 microns for smooth and highly-detailed prints. Compatible with Apple iOS and OS X, Windows and Linux including file types STL, OBJ and AMF. Supports over 20 materials including PLA, carbon fiber—, wood- and metal-infused, as well as flexible filaments. A 1-year commercial subscription to Autodesk Fusion 360 is included with each unit with 24/7 customer support and a 6-month parts replacement warranty.</p></div>
+			<div id="LearnLess"><p><a class="btn btn-primary btn-lg" role="button" onClick='document.getElementById("LearnMore").style.display="block";document.getElementById("LearnLess").style.display="none";'>Learn more	&raquo;</a></p></div>
 		</div>
 	</div>
 
