--- a/views/robo-r1plus.ejs
+++ b/views/robo-r1plus.ejs
@@ -8,11 +8,9 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Robo R1+ Plus</h1>
-			<p>Paragraph</p>
-			<p>
-				<a class="btn btn-primary btn-lg" role="button">Learn more
-					&raquo;</a>
-			</p>
+			<p>The improved R1+ Plus includes all-new linear motion and lead screws for better quality, performance and consistency. Also includes a better filament-feeding system for ease-of-use and an extruder "quick release" for fast change-out. Additional components for leveling, guidance and performance of the R1+ Plus make it the best option for desktop 3D Printing today. At the top of the industry in size of build platform, the R1+ Plus 3D Printer has a 10”x9”x8” build volume and a heated bed.</p>
+			<div id="LearnMore" style="display:none"><p>The R1+ Plus ROBO 3D Printer is automatically set to a 9-point leveling system every time it starts a print. Includes a 1-year commercial license for Autodesk Fusion 360 and 6-month parts warranty.</p></div>
+			<div id="LearnLess"><p><a class="btn btn-primary btn-lg" role="button" onClick='document.getElementById("LearnMore").style.display="block";document.getElementById("LearnLess").style.display="none";'>Learn more	&raquo;</a></p></div>
 		</div>
 	</div>
 
