--- a/views/robo-r2.ejs
+++ b/views/robo-r2.ejs
@@ -8,11 +8,9 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1>Robo R2</h1>
-			<p>Paragraph</p>
-			<p>
-				<a class="btn btn-primary btn-lg" role="button">Learn more
-					&raquo;</a>
-			</p>
+			<p>The Robo R2 is the next generation of fully-featured 3D printers from Robo 3D. Featuring a large 8"x8"x10" build volume, it has one of the fastest print speeds in the 3D consumer space with 250 mm per second and one of the largest build volumes in its category. With a built-in 5" color touch screen as well as WiFi and mobile connectivity, it is fully compatible with Robo's new print app so you can 3D print right from any iOS device. The Robo R2 printer brings a high-quality, easy-to-use solution to consumers. The Robo R2 features a removable, heated, and automatic self-leveling print bed.</p>
+			<div id="LearnMore" style="display:none"><p>Compatible with Apple iOS and OS X, Windows and Linux including file types STL, OBJ and AMF. Supports over 20 materials including PLA, carbon fiber—, wood- and metal-infused, as well as flexible filaments. You can also add an additional extrusion head and print two materials at once! A 1-year commercial subscription to Autodesk Fusion 360 is included with each unit with 24/7 customer support and a 12-month parts replacement warranty.</p></div>
+			<div id="LearnLess"><p><a class="btn btn-primary btn-lg" role="button" onClick='document.getElementById("LearnMore").style.display="block";document.getElementById("LearnLess").style.display="none";'>Learn more	&raquo;</a></p></div>
 		</div>
 	</div>
 
