--- a/views/content.ejs
+++ b/views/content.ejs
@@ -5,7 +5,7 @@
 		<img class="gray-img" src="/images/Robo_R1Plus_Front.png" width="362"
 		  onClick='document.location="/robo-r1plus";' />
 		<h2 onClick='document.location="/robo-r1plus";'>Robo R1+ Plus</h2>
-		<p style='text-align:justify'>The physical dimensions of the R1 are 17"x15"x18" (43cm × 38cm × 46cm) allowing it to have a build volume of 10"x9"x8" (25cm × 23cm × 20cm) or 720 cubic inches (11.8 l). The layer resolution is 100 µm on high, 200 µm on medium and 300 µm on low. The filament diameter is 1.75 mm and the nozzle diameter is 0.4 mm.</p>
+		<p style='text-align:justify'>The physical dimensions of the R1 are 17"x15"x18" with a build volume of 10"x9"x8". The layer resolution is as low as 100 µm. The filament diameter is 1.75 mm and the nozzle diameter is 0.4 mm.</p>
 		<p>
 			<a class="btn btn-default" href="/robo-r1plus" role="button">View details
 				&raquo;</a>
@@ -15,7 +15,7 @@
 		<img class="gray-img" src="/images/Robo_C2_Front.png" width="362" style="padding-top: 22px"
 		  onClick='document.location="/robo-c2";' />
 		<h2 onClick='document.location="/robo-c2";'>Robo C2</h2>
-		<p style='text-align:justify'>The compact version of the set, the C2 has a 5"x5"x6" print volume, built-in touchscreen LCD, auto-leveling, wi-fi and print resolution as high as 20 microns per layer.</p>
+		<p style='text-align:justify'>The compact version of the set, the C2 has a 5"x5"x6" print volume, built-in touchscreen LCD, auto-leveling, wi-fi and print resolution as high as 20 microns per layer. The filament diameter is 1.75 mm and the nozzle diameter is 0.4 mm.</p>
 		<p>
 			<a class="btn btn-default" href="robo-c2" role="button">View details
 				&raquo;</a>
@@ -25,7 +25,7 @@
 		<img class="gray-img" src="/images/Robo_R2_Front.png" width="362" style="padding-top: 4px"
 		  onClick='document.location="/robo-r2";' />
 		<h2 onClick='document.location="/robo-r2";'>Robo R2</h2>
-		<p style='text-align:justify'>The bigger brother, the R2 has an 8"x8"x10" print volume, built-in touchscreen LCD, auto-leveling, wi-fi, built-in camera, heated bed and print resolution as high as 20 microns per layer.</p>
+		<p style='text-align:justify'>The bigger brother, the R2 has an 8"x8"x10" print volume, built-in touchscreen LCD, auto-leveling, wi-fi, built-in camera, heated bed and print resolution as high as 20 microns per layer. The filament diameter is 1.75 mm and the nozzle diameter is 0.4 mm.</p>
 		<p>
 			<a class="btn btn-default" href="robo-r2" role="button">View details
 				&raquo;</a>
