--- a/hardware/content-parts-by-printer-by-vendor.ejs
+++ b/hardware/content-parts-by-printer-by-vendor.ejs
@@ -16,8 +16,8 @@
 					<!-- Robo C2 -->
 					<!--   Robo3D.com -->
 					<tr>
-						<th scope="row" rowspan="4">Robo C2</th>
-						<td rowspan="3">Robo3D.com</td>
+						<th scope="row" rowspan="14">Robo&nbsp;C2</th>
+						<td rowspan="3">Robo3D</td>
 						<td>Bed replacement sheets, black - 10 pack</td>
 						<td class="text-right">$9.99</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/parts/products/c2-bed-replacement-sheets-10-pack" target="_blank">Link</a></td>
@@ -32,6 +32,62 @@
 						<td class="text-right">$39.99</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/parts/products/hotend-c2" target="_blank">Link</a></td>
 					</tr>
+					<!--   Adafruit.com -->
+					<tr>
+						<td rowspan="2">Adafruit</td>
+						<td>Raspberry Pi NoIR Camera Board v2 - 8 Megapixels</td>
+						<td class="text-right">$29.95</td>
+						<td class="text-center"><a href="https://www.adafruit.com/product/3100" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>Flex Cable for Raspberry Pi Camera - 18" / 457mm</td>
+						<td class="text-right">$2.59</td>
+						<td class="text-center"><a href="https://www.adafruit.com/product/1730" target="_blank">Link</a></td>
+					</tr>
+					<!--   Digikey.com -->
+					<tr>
+						<td rowspan="1">Digi-Key</td>
+						<td>JST connector, 2 pin, receptacle</td>
+						<td class="text-right">$0.17</td>
+						<td class="text-center"><a href="https://www.digikey.com/product-detail/en/S2B-PH-K-S(LF)(SN)/455-1719-ND/926626?WT.mc_id=IQ_7595_G_pla926626&wt.srch=1&wt.medium=cpc&&gclid=EAIaIQobChMI0ZbGkdCR1gIVF5J-Ch2gRg_3EAQYAyABEgKh-vD_BwE" target="_blank">Link</a></td>
+					</tr>
+					<!--   PrintedSolid.com -->
+					<tr>
+						<td rowspan="7">PrintedSolid</td>
+						<td>E3D hardened steel nozzle - 1.75mm filament, 0.4mm nozzle (select filament/nozzle size on page)</td>
+						<td class="text-right">$25.00</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/accessories-and-upgrades/products/e3dhardenednozzle?variant=7434731715" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>NEMA17 stepper motor</td>
+						<td class="text-right">$16.00</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/accessories-and-upgrades/products/stepper-motor" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D V6 replacement part - threaded bowden coupling</td>
+						<td class="text-right">$5.99</td>
+						<td class="text-center"><a href="https://printedsolid.com/products/e3d-v6-replacement-parts?variant=4033132931" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D V6 replacement part - bowden collet</td>
+						<td class="text-right">$3.00</td>
+						<td class="text-center"><a href="https://printedsolid.com/products/e3d-v6-replacement-parts?variant=44053298892" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D V6 replacement part - groove mount bowden adapter</td>
+						<td class="text-right">$10.99</td>
+						<td class="text-center"><a href="https://printedsolid.com/products/e3d-v6-replacement-parts?variant=4241479939" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D V6 replacement part - 100mm bowden tubing</td>
+						<td class="text-right">$3.00</td>
+						<td class="text-center"><a href="https://printedsolid.com/products/e3d-v6-replacement-parts?variant=4241435267" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D V6 replacement part - nickel-plated copper alloy heater block</td>
+						<td class="text-right">$29.99</td>
+						<td class="text-center"><a href="https://printedsolid.com/products/e3d-v6-replacement-parts?variant=4033133635" target="_blank">Link</a></td>
+					</tr>
 					<!--   ServoCity.com -->
 					<tr>
 						<td rowspan="1">ServoCity</td>
@@ -39,12 +95,12 @@
 						<td class="text-right">$1.99</td>
 						<td class="text-center"><a href="https://www.servocity.com/0-500-diameter-magnet-north" target="_blank">Link</a></td>
 					</tr>
-
+	
 					<!-- Robo R2 -->
 					<!--   Robo3D.com -->
 					<tr>
-						<th scope="row" rowspan="1">Robo R2</th>
-						<td rowspan="1">Robo3D.com</td>
+						<th scope="row" rowspan="1">Robo&nbsp;R2</th>
+						<td rowspan="1">Robo3D</td>
 						<td>No parts offered on their store yet</td>
 						<td class="text-right">&nbsp;</td>
 						<td class="text-center">&nbsp;</td>
@@ -53,8 +109,8 @@
 					<!-- Robo R1 -->
 					<!--   Robo3D.com -->
 					<tr>
-						<th scope="row" rowspan="6">Robo R1/R1+</th>
-						<td rowspan="6">Robo3D.com</td>
+						<th scope="row" rowspan="15">Robo&nbsp;R1/R1+</th>
+						<td rowspan="6">Robo3D</td>
 						<td>Hexagon hotend full 1.75mm</td>
 						<td class="text-right">$39.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/parts/products/hexagon-hotend-full" target="_blank">Link</a></td>
@@ -83,6 +139,53 @@
 						<td>Stepper driver assembly, 0.35V, with heatshink</td>
 						<td class="text-right">$10.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/parts/products/r1-stepperdriver-0-35v-assembly" target="_blank">Link</a></td>
+					</tr>
+					<!--   PrintedSolid.com -->
+					<tr>
+						<td rowspan="9">PrintedSolid</td>
+						<td>Upgrade kit - E3D V6 direct drive hot end kit 1.75mm with fan/thermistor and Smart LCD Controller XXL with SD card reader and 4GB card (requires parts to be printed)</td>
+						<td class="text-right">$134.00</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/accessories-and-upgrades/products/robo3d-upgrade-bundle" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D V6 direct drive hot end kit 1.75mm with fan/thermistor</td>
+						<td class="text-right">$71.99</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/accessories-and-upgrades/products/e3d-hot-end-kit-v6" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D Titan extruder - 1.75mm and 3.0mm compatible (requires a bracket to be printed)</td>
+						<td class="text-right">$66.99</td>
+						<td class="text-center"><a href="" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D hardened steel nozzle - 1.75mm filament, 0.4mm nozzle (select filament/nozzle size on page)</td>
+						<td class="text-right">$25.00</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/accessories-and-upgrades/products/e3dhardenednozzle?variant=7434731715" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D silicone sock upgrade package</td>
+						<td class="text-right">$26.99</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/accessories-and-upgrades/products/e3d-silicone-sock-upgrade-package" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D silicone socks multipack - 6</td>
+						<td class="text-right">$11.99</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/accessories-and-upgrades/products/e3d-silicone-socks-3-pack?variant=34942268556" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D volcano add-on</td>
+						<td class="text-right">$53.00</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/accessories-and-upgrades/products/e3d-volcano-add-on" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>NEMA17 stepper motor</td>
+						<td class="text-right">$16.00</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/accessories-and-upgrades/products/stepper-motor" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>E3D full bowden upgrade bundle (Titan, stepper, bowden adapter, tube, E3D V6)</td>
+						<td class="text-right">$164.99</td>
+						<td class="text-center"><a href="https://printedsolid.com/collections/bundles/products/e3d-full-bowden-upgrade-bundle" target="_blank">Link</a></td>
 					</tr>
 				</tbody>
 			</table>
