--- a/hardware/content.ejs
+++ b/hardware/content.ejs
@@ -20,10 +20,13 @@
     <a name="robo-r2"></a>
 		<h2>Robo R2</h2>
 		<p style='text-align:justify;color:gray'>Hover over the image below to find more detail about the parts and subassemblies.</p>
+		<img src="/images/Robo_R2_FrontLarge.png" width="685">
+		<img src="/images/Robo_R2_Top.png" width="685">
 		<hr>
 		
     <a name="robo-r1plus"></a>
 		<h2>Robo R1+ Plus</h2>
 		<p style='text-align:justify;color:gray'>Hover over the image below to find more detail about the parts and subassemblies.</p>
+		<img src="/images/Robo_R1Plus_FrontLarge.jpg" width="685">
 	</div>
 </div>
