--- a/software/content.ejs
+++ b/software/content.ejs
@@ -8,16 +8,46 @@
 
 		<a name="robo-c2"></a>
 		<h2 onClick='document.location="#";'>Robo C2</h2>
-		<p style='text-align:justify'>Paragraph.</p>
+		<p style='text-align:justify'>Out-of-the-box, the printer comes with the following software pre-installed:
+			<ul>
+				<li>Marlin firmware on the Robo board controller</li>
+				<li>Raspbian Jessie on the Raspberry Pi 3 single board computer inside, specifically, on a 4GB microSD card</li>
+				<li>Robo3D's fork of OctoPrint/OctoPi loaded on the Raspberry Pi 3</li>
+				<li>A separate 4GB USB drive with the Quick Start Guide (PDF), a link to download additional software and four sliced parts: cell phone case, Robo logo keychain, twisted vase and a whistle</li>
+			</ul>
+		</p>
+		<p style='text-align:justify'>Included documentation indicates additional software which may be downloaded:
+			<ul>
+				<li>Cura 2.5 slicing software for your workstation</li>
+				<li>A commercial, 1-year license for Autodesk Fusion 360 design/CAD software for your workstation</li>
+			</ul>
+		</p>
 
 		<hr>
     <a name="robo-r2"></a>
 		<h2 onClick='document.location="#";'>Robo R2</h2>
-		<p style='text-align:justify'>Paragraph.</p>
+		<p style='text-align:justify'>Out-of-the-box, the printer comes with the following software pre-installed:
+			<ul>
+				<li>Marlin firmware on the Robo board controller</li>
+				<li>Raspbian Jessie on the Raspberry Pi 3 single board computer inside, specifically, on a 4GB microSD card</li>
+				<li>Robo3D's fork of OctoPrint/OctoPi loaded on the Raspberry Pi 3</li>
+				<li>A separate 4GB USB drive with the Quick Start Guide (PDF), a link to download additional software and four sliced parts: cell phone case, Robo logo keychain, twisted vase and a whistle</li>
+			</ul>
+		</p>
+		<p style='text-align:justify'>Included documentation indicates additional software which may be downloaded:
+			<ul>
+				<li>Cura 2.5 slicing software for your workstation</li>
+				<li>A commercial, 1-year license for Autodesk Fusion 360 design/CAD software for your workstation</li>
+			</ul>
+		</p>
 
 		<hr>
     <a name="robo-r1plus"></a>
 		<h2 onClick='document.location="#";'>Robo R1+ Plus</h2>
-		<p style='text-align:justify'>Paragraph.</p>
+		<p style='text-align:justify'>Out-of-the-box, the printer comes with the following software pre-installed:
+			<ul>
+				<li>Marlin firmware on the Robo board controller</li>
+			</ul>
+		</p>
 	</div>
 </div>
