--- a/troubleshooting/content.ejs
+++ b/troubleshooting/content.ejs
@@ -4,14 +4,44 @@
 	<div class="col-md-10">
     <a name="robo-c2"></a>
 		<h2 onClick='document.location="#";'>Robo C2</h2>
-		<p style='text-align:justify'>Paragraph.</p>
+		<p style='text-align:justify'>First things first: if you haven't already done so, run the printer's Z Offset Wizard from the LCD screen. Properly adjusting the height of the extruder assembly from the print bed should solve a variety of print quality—related issues. Here's a checklist of basic tasks:
+			<ul>
+				<li>Run the Z Offset Wizard to verify that your extruder is vertically aligned with your print bed at the proper height.</li>
+				<li>If you are using Cura or Simplify3D to slice your STL files, make sure to download the printer/material profiles from <a href="https://github.com/Robo3D/Slicing-Profiles" target="_blank">Robo3D's repository</a> and import them into your software and further, to make them active for your slicing jobs.</li>
+				<li>If you've just received your printer from a carrier, check it for any damage. Verify that belts are relatively tight, that end-stop switches for each assembly aren't loose, with the printer off verify that you can move the extruder assembly left/right and that it moves smoothly, with the printer off verify that you can twist the vertical screw at the back to raise/lower the print bed.</li>
+				<li>After two minutes of being turned on, the LCD screen should initially display "Robo" followed by a menu.</li>
+				<li>Although there are other sources for the Cura software, it's best to use the link provided in your documentation to download Robo 3D's optimized version for your printer.</li>
+				<li>After connecting your printer to either an Ethernet connection or by connecting to your local wi-fi network, you should update the printer's software via the LCD option for doing so.</li>
+				<li>When installing a new roll of filament, make sure to route the filament through the left-most hole in the filament sensor block (as viewed from the front of the printer). Also, you should use the included filament tube between the top of the filament sensor block and the left-most hole at the top of the hotend/extruder assembly.</li>
+				<li>Although the smartphone app seems to work, most people forego this and use the OctoPrint interface from their workstation's browser. You can reach this via the URLs: http://<i>serial-number</i>.local (OS X—based network) or http://<i>printer_ip_address</i> (Windows-based network). Your serial number can be found on the label on the back of the printer.</li>
+			</ul>
+		</p>
 
     <a name="robo-r2"></a>
 		<h2 onClick='document.location="#";'>Robo R2</h2>
-		<p style='text-align:justify'>Paragraph.</p>
-
+		<p style='text-align:justify'>First things first: if you haven't already done so, run the printer's Z Offset Wizard from the LCD screen. Properly adjusting the height of the extruder assembly from the print bed should solve a variety of print quality—related issues. Here's a checklist of basic tasks:
+			<ul>
+				<li>Run the Z Offset Wizard to verify that your extruder is vertically aligned with your print bed at the proper height.</li>
+				<li>If you are using Cura or Simplify3D to slice your STL files, make sure to download the printer/material profiles from <a href="https://github.com/Robo3D/Slicing-Profiles" target="_blank">Robo3D's repository</a> and import them into your software and further, to make them active for your slicing jobs.</li>
+				<li>If you've just received your printer from a carrier, check it for any damage. Verify that belts are relatively tight, that end-stop switches for each assembly aren't loose, with the printer off verify that you can move the extruder assembly left/right and that it moves smoothly, with the printer off verify that you can twist the vertical screw at the back to raise/lower the print bed.</li>
+				<li>After two minutes of being turned on, the LCD screen should initially display "Robo" followed by a menu.</li>
+				<li>Although there are other sources for the Cura software, it's best to use the link provided in your documentation to download Robo 3D's optimized version for your printer.</li>
+				<li>After connecting your printer to either an Ethernet connection or by connecting to your local wi-fi network, you should update the printer's software via the LCD option for doing so.</li>
+				<li>When installing a new roll of filament, make sure to route the filament through the left-most hole in the filament sensor block (as viewed from the front of the printer).</li>
+				<li>When installing a new roll of filament, make sure to route the filament through the left-most hole in the filament sensor block (as viewed from the front of the printer). Also, you should use the included filament tube between the top of the filament sensor block and the left-most hole at the top of the hotend/extruder assembly.</li>
+				<li>Although the smartphone app seems to work, most people forego this and use the OctoPrint interface from their workstation's browser. You can reach this via the URLs: http://<i>serial-number</i>.local (OS X—based network) or http://<i>printer_ip_address</i> (Windows-based network). Your serial number can be found on the label on the back of the printer.</li>
+				<li>For time-lapse/webcam viewing, you need to turn on the webcam streaming from OctoPrint's System menu and refresh the page.</li>
+			</ul>
+		</p>
+		
     <a name="robo-r1plus"></a>
 		<h2 onClick='document.location="#";'>Robo R1+ Plus</h2>
-		<p style='text-align:justify'>Paragraph.</p>
+		<p style='text-align:justify'>Here's a checklist of basic tasks:
+			<ul>
+				<li>Home your extruder (Z-offset) following <a href="http://guide.robo3d.com/Guide/Homing+Your+Extruder/7" target="_blank">these</a> instructions.</li>
+				<li>Connect to your printer from Windows following <a href="http://guide.robo3d.com/Guide/How+to+Connect+to+your+printer+on+windows/4" target="_blank">these</a> instructions.</li>
+				<li>Verify proper print bed cable travel following <a href="http://guide.robo3d.com/Guide/Print+bed+proper+cable+travel/5" target="_blank">these</a> instructions.</li>
+			</ul>
+		</p>
 	</div>
 </div>
