--- a/software/content-software-by-type-by-vendor.ejs
+++ b/software/content-software-by-type-by-vendor.ejs
@@ -52,8 +52,8 @@
 						<td rowspan="1">Robo3D</td>
 						<td>App for remote-controlling C2/R2 printer (iOS)</td>
 						<td class="text-right">free</td>
-						<td class="text-center"><a href="http://octoprint.org" target="_blank">Link</a></td>
-						<td class="text-center"><a href="https://github.com/foosel/OctoPrint" target="_blank">Github</a></td>
+						<td class="text-center"><a href="https://robo3d.com/app-download/" target="_blank">Link</a></td>
+						<td class="text-center">N/A</td>
 					</tr>
 
 					<!-- Slicer -->
