--- a/software/content-software-by-type-by-vendor.ejs
+++ b/software/content-software-by-type-by-vendor.ejs
@@ -17,7 +17,7 @@
 					<!-- Host -->
 					<!--   OctoPrint -->
 					<tr>
-						<th scope="row" rowspan="4">Host</th>
+						<th scope="row" rowspan="9">Host</th>
 						<td rowspan="3">OctoPrint</td>
 						<td>Host software for 3D printing with full remote control and monitoring</td>
 						<td class="text-right">free</td>
@@ -38,11 +38,41 @@
 					</tr>
 					<!--   Robo3D.com -->
 					<tr>
-						<td rowspan="1">Robo3D</td>
+						<td rowspan="6">Robo3D</td>
 						<td style="background-color:aqua">Robo-specific release of the OctoPrint/OctoPi for the Robo C2 (robo-c2-oob-4gb.zip)</td>
 						<td class="text-right">free</td>
 						<td class="text-center"><a href="https://drive.google.com/drive/folders/0B32etcQFGrUNUGtOY3VFRUZQVEk" target="_blank">Link</a></td>
 						<td class="text-center"><a href="https://github.com/Robo3D/OctoPrint" target="_blank">Github</a></td>
+					</tr>
+					<tr>
+						<td>Robo-specific UI subcomponent for the LCD screen</td>
+						<td class="text-right">free</td>
+						<td class="text-center">N/A</td>
+						<td class="text-center"><a href="https://github.com/victorevector/RoboLCD" target="_blank">Github</a></td>
+					</tr>
+					<tr>
+						<td>Robo-specific theme subcomponent for OctoPrint</td>
+						<td class="text-right">free</td>
+						<td class="text-center">N/A</td>
+						<td class="text-center"><a href="https://github.com/Robo3D/OctoPrint-robotheme" target="_blank">Github</a></td>
+					</tr>
+					<tr>
+						<td>Robo-specific custom control editor subcomponent for OctoPrint</td>
+						<td class="text-right">free</td>
+						<td class="text-center">N/A</td>
+						<td class="text-center"><a href="https://github.com/Robo3D/octoprint-customControl" target="_blank">Github</a></td>
+					</tr>
+					<tr>
+						<td>Robo-specific mainboard connection subcomponent for OctoPrint</td>
+						<td class="text-right">free</td>
+						<td class="text-center">N/A</td>
+						<td class="text-center"><a href="https://github.com/Robo3D/OctoPrint-MainboardConnection" target="_blank">Github</a></td>
+					</tr>
+					<tr>
+						<td>Robo-specific meta reader subcomponent for OctoPrint</td>
+						<td class="text-right">free</td>
+						<td class="text-center">N/A</td>
+						<td class="text-center"><a href="https://github.com/Robo3D/Meta-Reader" target="_blank">Github</a></td>
 					</tr>
 	
 					<!-- Client/App -->
