--- a/hardware/content.ejs
+++ b/hardware/content.ejs
@@ -4,6 +4,8 @@
 	<div class="col-md-10">
 		<h2 onClick='document.location="/hardware/parts-by-printer-by-vendor";'>Parts by Printer by Vendor</h2>
 		<p>Go <a href="/hardware/parts-by-printer-by-vendor">here</a> for the full part database.</p>
+		<h2 onClick='document.location="/hardware/robo-c2r2-board";'>Robo Board</h2>
+		<p>Go <a href="/hardware/robo-c2r2-board">here</a> to see all connections for the Robo control board for the C2/R2 printers.</p>
 		<hr>
 
 		<a name="robo-c2"></a>
