--- a/hardware/content-robo-c2r2-board.ejs
+++ b/hardware/content-robo-c2r2-board.ejs
@@ -1,17 +1,16 @@
 
-<script>
+<!--script>
 function hoverMouse(e) {
 	document.getElementById("idImg").innerHTML = e.clientX + "," + e.clientY;
   return false;
 }
-</script>
-</script>
+</script-->
 <!-- Example row of columns -->
 <div class="row">
 	<div class="col-md-10">
 		<h2>Robo C2/R2 Control Board</h2>
 		<p style='text-align:justify'>Hover over the image below to find more detail about the parts and subassemblies.</p>
-		<img onClick='hoverMouse(event);' src="/images/Robo_C2R2_Board.jpg" usemap="#roboboardmap">
+		<img CommentedOutonClick='hoverMouse(event);' src="/images/Robo_C2R2_Board.jpg" usemap="#roboboardmap">
     <div id="idImg"></div>
 		<map name="roboboardmap" comment="720 × 960">
 			<!--area shape="circle" coords="10,700,100" nohref title='Connector "X"'
