--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <title><%= title %></title>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <!-- Latest compiled and minified CSS -->
