--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -11,6 +11,8 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li id="home"><a href="/">Home</a></li>
+				<li id="parts"><a href="/hardware/parts-by-printer-by-vendor">Parts</a></li>
+				<li id="software"><a href="/software/software-by-type-by-vendor">Software</a></li>
 				<li id="about"><a href="/about">About</a></li>
 			</ul>
 		</div>
