--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -13,6 +13,7 @@
 				<li id="home"><a href="/">Home</a></li>
 				<li id="parts"><a href="/hardware/parts-by-printer-by-vendor">Parts</a></li>
 				<li id="software"><a href="/software/software-by-type-by-vendor">Software</a></li>
+				<li id="consumables"><a href="/consumables">Consumables</a></li>
 				<li id="about"><a href="/about">About</a></li>
 			</ul>
 		</div>
